--- a/package.json
+++ b/package.json
@@ -23,23 +23,34 @@
     "@mantine/prism": "^6.0.21",
     "@mantine/spotlight": "^6.0.21",
     "@mantine/tiptap": "^6.0.21",
+    "@radix-ui/react-slot": "^1.0.2",
     "@tabler/icons-react": "^2.40.0",
+    "@tanstack/react-table": "^8.10.7",
     "@tauri-apps/api": "^1.5.0",
     "@tiptap/extension-link": "^2.1.12",
     "@tiptap/react": "^2.1.12",
     "@tiptap/starter-kit": "^2.1.12",
     "buffer": "^6.0.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "csv-stringify": "^6.4.4",
     "dayjs": "^1.11.10",
     "embla-carousel-react": "^7.1.0",
+    "lucide-react": "^0.292.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.0",
+    "@types/node": "^20.8.10",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5.0.2",
     "vite": "^4.4.4"
   }
