--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,11 @@
             "@/*": [
                 "./src/*"
             ]
-        }
+        },
+        /*ignore*/
+        "skipLibCheck": true,
+        "noUnusedLocals": false,
+        "noUnusedParameters": false,
     },
     "include": [
         "src"
